--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "clean": "rimraf dist",
     "build": "npm run clean && babel src --out-dir dist",
     "lint": "eslint --ignore-path .gitignore .",
-    "test": "npm run lint",
+    "jest": "jest",
+    "test": "npm run lint && npm run jest",
     "prepublish": "npm run build && npm test"
   },
   "repository": {
@@ -33,6 +34,7 @@
     "babel-cli": "^6.8.0",
     "babel-core": "^6.8.0",
     "babel-eslint": "^6.0.4",
+    "babel-jest": "^12.0.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-1": "^6.5.0",
     "codeclimate-test-reporter": "^0.3.1",
@@ -40,6 +42,10 @@
     "eslint": "^2.9.0",
     "eslint-config-airbnb-base": "^3.0.1",
     "eslint-plugin-import": "^1.7.0",
+    "jest-cli": "^12.0.2",
     "rimraf": "^2.5.2"
+  },
+  "jest": {
+    "collectCoverage": "true"
   }
 }
