--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "codeclimate-test-reporter": "^0.3.1",
     "coveralls": "^2.11.9",
     "eslint": "^2.9.0",
-    "eslint-config-airbnb-base": "^3.0.1",
+    "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.7.0",
     "jest-cli": "^12.0.2",
     "rimraf": "^2.5.2"
