--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,11 @@
 {
-    "extends": "airbnb/base",
-    "parser": "babel-eslint",
+  "parser": "babel-eslint",
+  "extends": [
+    "eslint-config-airbnb-base",
+    "prettier"
+  ],
 
-    "rules": {
-        "indent": [2, 4, {"SwitchCase": 1}],
-        "max-len": [2, 140, 2]
-    }
+  "rules": {
+    "max-len": [2, 160, 2]
+  }
 }
